--- a/curso_aulas/css/style2.css
+++ b/curso_aulas/css/style2.css
@@ -1,17 +1,32 @@
-.lista div{
+.elementoUl{
+	float: left;
+	position: absolute;
+}
+
+.box_list{
 	text-transform: uppercase;
-}
-
-.lista div a{
-	text-decoration: none;
-	
-	background: gray;
-	color: white;
-	padding: 4px;
-}
-
-.lista div a:hover{
-	text-decoration: none;
+	padding: 10px;
+	text-align: center;
 	background: black;
+	font-family: arial;
+	font-size: 10px;
+	width: 200px;
+	margin-bottom: 2px;
+}	
+
+.elementoUl ul{
+	height: 200px;
+}	
+
+.elementoUl li{
+	display: inline;
+}	
+
+.elementoUl li a{
+	text-decoration: none;
 	color: white;
+}	
+
+.box_list:hover{
+	background: blue;
 }
